# stock-price-prediction

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/stock_price_prediction/: __init__.py  cli.py  learn.py  stock.py
tests/: __init__.py  test_stock_price_prediction.py
