[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_price_prediction"
version = "1.0.0"
description = "Uses machine learning to predict future stock prices based on historical data"
readme = "README.rst"
authors = [
  {name = "Patrick Seitz", email = "seitzpr@gmail.com"}
]
maintainers = [
  {name = "Patrick Seitz", email = "seitzpr@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/pat8901/stock_price_prediction/issues"
changelog = "https://github.com/pat8901/stock_price_prediction/blob/master/changelog.md"
homepage = "https://github.com/pat8901/stock_price_prediction"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

